--- a/kensakumeisho.html
+++ b/kensakumeisho.html
@@ -46,7 +46,7 @@
                                 listItem.innerHTML = "<hr>組織番号:" + item.orgid + "<br>" +
                                  item.meishokatakana + "<br>" +
                                    item.meisho + "<br>" +
-                                    "<strong>地域:</strong> " + item.region + "<br>" 
+                                    item.region + "<br>" 
                                 resultDiv.appendChild(listItem);
                             });
                         }
