--- a/history.html
+++ b/history.html
@@ -33,8 +33,8 @@
                 <script>
                     $.ajax({
                         type: "GET",
-                        url: "https://script.google.com/macros/s/AKfycbw7LGlAZx6yYTf37wRM7HoMRMayOalEQcb3razeqBhKAW18vBsPIwe3_eH7BlkeMs24/exec",
-                        data: { key: decodeURI(location.search.substr(5)) },
+                        url: "https://script.google.com/macros/s/AKfycbzUs-PosIUTPJgFcEIlljbOZyba3bkUN7Ivv2nTzwK1WZgVpTK_2KfCSHLuQrxRe5bG/exec",
+                        data: { key: decodeURI(location.search.substr(4)) },
                         async: false
                     })
                         .done(function (data) {
@@ -55,7 +55,7 @@
                                     item.lastupdate
                                 resultDiv.appendChild(listItem);
                             });
-                            document.title=
+                            document.title=data.meisho;
                         }
                         
                         })
