--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
                     $.ajax({
                         type: "GET",
                         url: "https://script.google.com/macros/s/AKfycbzUs-PosIUTPJgFcEIlljbOZyba3bkUN7Ivv2nTzwK1WZgVpTK_2KfCSHLuQrxRe5bG/exec",
-                        data: { key: decodeURI(location.search.substr(4)) },
+                        data: { orgid: decodeURI(location.search.substr(4)) },
                         async: false
                     })
                         .done(function (data) {
