--- a/history.html
+++ b/history.html
@@ -55,7 +55,7 @@
                                     item.lastupdate
                                 resultDiv.appendChild(listItem);
                             });
-                            document.title=data.meisho;
+                            document.title=data.meisho+"の情報 | Indeeecsa組織番号検索サイト";
                         }
                         
                         })
