--- a/history.html
+++ b/history.html
@@ -59,7 +59,7 @@
                                 resultDiv.appendChild(listItem);
                                 document.title=item.meisho+"の情報 | Indeeecsa組織番号検索サイト";
                                 document.getElementById("titls").innerHTML=item.meisho+"の情報";
-                                document.getElementById("lsta").innerHTML="登録の変更/作成履歴"+item.history;
+                                document.getElementById("lsta").innerHTML="登録の変更/作成履歴<br><br>"+item.history;
                             });
                            
                         }
