--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <a href="sitemap/" style="color:#909090">サイトマップ</a>
         <br>
         <a href="https://haruharutv.jp/" style="color:#909090">はるはるTV</a>
+        <br>組織番号:3506666446398 千葉県
       </div>
 
       <small>&copy; 2014 Indeeecsa</small>
