--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <topbar>
-    <img src="https://indeeecsa-orgnization-search.netlify.app/service-logo.png" class="service-logo">
+    <img src="https://indeeecsa-orgnization-search.netlify.app/service-logo.png" class="service-logo" alt="service-logo">
   </topbar>
   <maincontents>
 
