--- a/validating_check.html
+++ b/validating_check.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>チェックディジット検証</title>
+<title>組織番号検証</title>
 </head>
 <body>
 
-<h2>チェックディジット検証</h2>
+<h2>組織番号検証</h2>
 
 <label for="randomNumberInput">生成された13桁の乱数を入力してください:</label>
 <input type="text" id="randomNumberInput">
