--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <a href="about/" style="color:#909090">このサイトについて</a>
         <a href="https://hmg-publisha.haruharutv.jp/terms" style="color:#909090">共通利用規約↗</a>
         <a href="sitemap/" style="color:#909090">サイトマップ</a>
+        <a href="validating_check.html" style="color:#909090">組織番号検証</a>
         <br>
         <a href="https://haruharutv.jp/" style="color:#909090">はるはるTV</a>
         <br>組織番号:3506666446398 千葉県
