--- a/validating_check.html
+++ b/validating_check.html
@@ -9,7 +9,8 @@
 
 <h2>組織番号検証</h2>
 <p>組織番号のチェックディジットを検証できます。<br>基本的には検索画面の「組織番号で探す」からお探しになれますが、<br>データベース掲載の承諾のない場合や、万が一データベースの反映ができていないに簡易的に検証できます。</p>
-<b>※この検証はその番号が存在する証明ではありません。</b>
+<b>※この検証はその番号が存在する証明ではありません。</b>また、
+<a href="nodata.html">データベース掲載の承諾のない企業について</a>はのリンクからご確認いただけます。
 <label for="randomNumberInput">生成された13桁の乱数を入力してください:</label>
 <input type="text" id="randomNumberInput"><br>
 <button onclick="validateCheckDigit()">検証する</button>
