--- a/nodata.html
+++ b/nodata.html
@@ -28,12 +28,12 @@
                 <h2>組織番号データベース公開の承諾のない企業について</h2>
                 <p>基本的には、すべてのものがデータベースを経由し配信されていますが、データベース掲載を拒否する企業の場合は内容についてお問い合わせを一度Indeeecsaまでお知らせいただき、その内容について検討し個別に開示することになります(会員規約第1条 「開示の条件、保護について」に基づく開示)。</p>
                 <p>お問い合わせの際は、以下の内容をメールcontact+indeeecsa at haruharutv.jpを送信してください。(スパム防止のためatを@に置き換えてください)<br>
-                ・お名前
-                ・返信用メールアドレス
-                ・お問い合わせの内容
-                ・組織番号
-                ・組織番号に関する情報の使用用途
-                ・利用期間
+                ・お名前<br>
+                ・返信用メールアドレス<br>
+                ・お問い合わせの内容<br>
+                ・組織番号<br>
+                ・組織番号に関する情報の使用用途<br>
+                ・利用期間<br>
                 </p>
             </div>
         </about>
