--- a/calc.html
+++ b/calc.html
@@ -35,6 +35,6 @@ function generateRandomNumberWithCheckDigit() {
 
 // 13桁の乱数を生成
 let randomWithCheckDigit = generateRandomNumberWithCheckDigit();
-console.log("生成された13桁の乱数:", randomWithCheckDigit);
+document.write("生成された13桁の乱数:"+randomWithCheckDigit);
 
 </script>
