--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description"
     content="このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。">
 
-  <title>Indeecsa組織番号検索サイト</title>
+  <title>Indeeecsa組織番号検索サイト</title>
 </head>
 
 <body>
