--- a/validating_check.html
+++ b/validating_check.html
@@ -1,24 +1,412 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>組織番号検証</title>
-</head>
-<body>
 
+<head>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <meta name="google-site-verification" content="NGOM7ONHZi7WONhwlckYve1dBRqZKmK5GKSz0QLJXjY" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。">
+  <meta name="keywords" content="組織番号検索サイト">
+  <meta name="author" content="Indeeecsa">
+  <title>組織番号検証 | Indeeecsa組織番号検索サイト</title>
+</head>
+
+<body>
+  <topbar>
+    <img src="https://indeeecsa-orgnization-search.netlify.app/service-logo.png" class="service-logo" alt="service-logo">
+  </topbar>
+  <maincontents>
+
+    <about>
+        
 <h2>組織番号検証</h2>
 <p>組織番号のチェックディジットを検証できます。<br>基本的には検索画面の「組織番号で探す」からお探しになれますが、<br>データベース掲載の承諾のない場合や、万が一データベースの反映ができていないに簡易的に検証できます。</p>
 <b>※この検証はその番号が存在する証明ではありません。</b>また、
-<a href="nodata.html">データベース掲載の承諾のない企業について</a>はのリンクからご確認いただけます。
-<label for="randomNumberInput">生成された13桁の乱数を入力してください:</label>
+<a href="nodata.html">データベース掲載の承諾のない企業について</a>はのリンクからご確認いただけます。<br>
+<label for="randomNumberInput">検証したい組織番号を入力してください:</label>
 <input type="text" id="randomNumberInput"><br>
 <button onclick="validateCheckDigit()">検証する</button>
 <p id="validationResult"></p>
 
 <script>
-    function validateCheckDigit() { let randomNumber = document.getElementById("randomNumberInput").value; if (randomNumber.length !== 13) { document.getElementById("validationResult").innerText = "13桁の番号を入力してください。"; return; } let lastDigit = parseInt(randomNumber.charAt(12)); let truncatedNumber = randomNumber.substring(0, 12); let calculatedCheckDigit = calculateCheckDigit(truncatedNumber); if (lastDigit === calculatedCheckDigit) { document.getElementById("validationResult").innerHTML = "組織番号のチェックディジットは正しいです。<br><a href='history.html?id="+document.getElementById("randomNumberInput").value+"' style='color:lightblue;'>この組織番号で検索</a>"; } else { document.getElementById("validationResult").innerText = "チェックディジットが正しくありません。"; } } function calculateCheckDigit(randomNumber) { let evenParity = 0; let oddParity = 0; for (let i = 0; i < 12; i++) { if (i % 2 === 0) { evenParity += parseInt(randomNumber[i]); } else { oddParity += parseInt(randomNumber[i]); } } let checkDigit = (evenParity + oddParity) % 10; return checkDigit; }
+function _0x1af7(){const _0x511234=['8118iwSdVp','randomNumberInput','98414xboTpm','5958BlefDW','組織番号のチェックディジットは正しいです。<br><a\x20href=\x27history.html?id=','825oVLvDv','112486pcautX','validationResult','substring','チェックディジットが正しくありません。','528oOxjrI','8nzeYXq','4120ysIeFX','13575562cwNkMX','713406LrJEmx','21NcaRib','1813688nexRDo','26IrTmDw','4BhyzzV','getElementById','innerText','value','13桁の番号を入力してください。'];_0x1af7=function(){return _0x511234;};return _0x1af7();}(function(_0x270646,_0x273d26){const _0x5edd9f=_0x6019,_0x1bdc89=_0x270646();while(!![]){try{const _0x260fab=parseInt(_0x5edd9f(0x108))/0x1*(parseInt(_0x5edd9f(0x116))/0x2)+-parseInt(_0x5edd9f(0x10b))/0x3*(parseInt(_0x5edd9f(0x10f))/0x4)+parseInt(_0x5edd9f(0x119))/0x5*(-parseInt(_0x5edd9f(0x114))/0x6)+parseInt(_0x5edd9f(0x10c))/0x7*(-parseInt(_0x5edd9f(0x10d))/0x8)+parseInt(_0x5edd9f(0x117))/0x9*(-parseInt(_0x5edd9f(0x109))/0xa)+parseInt(_0x5edd9f(0x103))/0xb*(-parseInt(_0x5edd9f(0x107))/0xc)+parseInt(_0x5edd9f(0x10e))/0xd*(parseInt(_0x5edd9f(0x10a))/0xe);if(_0x260fab===_0x273d26)break;else _0x1bdc89['push'](_0x1bdc89['shift']());}catch(_0x12dd3e){_0x1bdc89['push'](_0x1bdc89['shift']());}}}(_0x1af7,0x728a2));function _0x6019(_0x59a8ed,_0x432315){const _0x1af7dd=_0x1af7();return _0x6019=function(_0x601915,_0x4a3062){_0x601915=_0x601915-0x103;let _0x4cd131=_0x1af7dd[_0x601915];return _0x4cd131;},_0x6019(_0x59a8ed,_0x432315);}function validateCheckDigit(){const _0x5aed36=_0x6019;let _0x282db4=document[_0x5aed36(0x110)](_0x5aed36(0x115))[_0x5aed36(0x112)];if(_0x282db4['length']!==0xd){document['getElementById'](_0x5aed36(0x104))[_0x5aed36(0x111)]=_0x5aed36(0x113);return;}let _0x56c290=parseInt(_0x282db4['charAt'](0xc)),_0x58296f=_0x282db4[_0x5aed36(0x105)](0x0,0xc),_0x1b27f4=calculateCheckDigit(_0x58296f);_0x56c290===_0x1b27f4?document['getElementById'](_0x5aed36(0x104))['innerHTML']=_0x5aed36(0x118)+document[_0x5aed36(0x110)]('randomNumberInput')[_0x5aed36(0x112)]+'\x27\x20style=\x27color:lightblue;\x27>この組織番号で検索</a>':document[_0x5aed36(0x110)](_0x5aed36(0x104))[_0x5aed36(0x111)]=_0x5aed36(0x106);}function calculateCheckDigit(_0x5518c3){let _0x193f37=0x0,_0xcb3388=0x0;for(let _0x401587=0x0;_0x401587<0xc;_0x401587++){_0x401587%0x2===0x0?_0x193f37+=parseInt(_0x5518c3[_0x401587]):_0xcb3388+=parseInt(_0x5518c3[_0x401587]);}let _0x165776=(_0x193f37+_0xcb3388)%0xa;return _0x165776;}
 </script>
+      <div
+        style="display:block;margin:15px;border-bottom:solid lightblue 5px;border-top:solid lightblue 10px;border-radius:10px 10px 0px 0px;">
+        <b style="display:block;margin:15px;border-bottom:solid lightblue 5px;">お知らせ</b>
+        <hr>
+        <p>新たなお知らせはありません</p>
+        <hr>
+      </div>
+      <div style="display:block;background: lightblue 10px;border-radius:10px;padding:10px;">
+        <a href="about/">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;border-radius:10px;">
+            Indeeecsa組織番号とは？
+          </div>
+        </a>
+        <a href="api/">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;border-radius:10px;">
+            WebAPIの仕様などについて
+          </div>
+        </a>
+      </div>
+    </about>
 
+
+    <footer style="display:block;text-align:center;padding:20px;background:#fcfcfc;color:#909090;margin:none;">
+
+      <div id="linkbox">
+        <a href="about/" style="color:#909090">このサイトについて</a>
+        <a href="https://hmg-publisha.haruharutv.jp/terms" style="color:#909090">共通利用規約↗</a>
+        <a href="sitemap/" style="color:#909090">サイトマップ</a>
+        <a href="validating_check.html" style="color:#909090">組織番号検証</a>
+        <br>
+        <a href="https://haruharutv.jp/" style="color:#909090">はるはるTV</a>
+        <br>組織番号:3506666446398 千葉県
+      </div>
+
+      <small>&copy; 2014 Indeeecsa</small>
+    </footer>
+  </maincontents>
 </body>
+<style>
+  select,
+  input {
+    padding: 7px;
+    display: block;
+    border: solid 2px #ccc;
+    border-radius: 5px;
+  }
+
+  sbmt {
+    padding: 5px;
+    display: inline-block;
+    background: rgb(3, 212, 202);
+    border-radius: 5px;
+    margin: 10px;
+    text-align: center;
+    color: #fff;
+    font-size: 21px;
+  }
+
+  .tab-container {
+    display: flex;
+  }
+
+  .tab-button {
+    border-radius: 8px 8px 0px 0px;
+    padding: 10px 20px;
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    border-top: solid 5px gray;
+    border-left: solid 5px gray;
+    border-right: solid 5px gray;
+    border-bottom: none;
+  }
+
+  .tab-button.active {
+    background-color: #fff;
+    border-top: solid 5px lightblue;
+    border-left: solid 5px lightblue;
+    border-right: solid 5px lightblue;
+    border-bottom: none;
+  }
+
+  .tab-content {
+    display: none;
+  }
+
+  .tab-content.active {
+    display: block;
+    border-bottom: solid 5px lightblue;
+    border-left: solid 5px lightblue;
+    border-right: solid 5px lightblue;
+    border-radius: 0px 0px 8px 8px;
+    padding: 15px;
+  }
+
+  li img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  #olink {
+    text-align: center;
+
+    padding: 15px;
+    display: block;
+    /* Flexboxを使って水平に並べる */
+    justify-content: center;
+    /* 中央寄せ */
+    align-items: center;
+    /* 垂直方向に中央寄せ */
+    /* バナーの高さ */
+    background-color: #f0f0f0;
+    /* バナーの背景色 */
+
+  }
+
+  #olink a {
+    margin: 10px;
+    /* リンクの間の余白 */
+  }
+
+  #olink img {
+    background-color: #ffffff;
+    height: auto;
+    width: 112px;
+    /* 画像の高さを50pxに固定 */
+    vertical-align: middle;
+    /* 画像を垂直方向に中央寄せ */
+  }
+
+  artist-profile {
+    display: flex;
+    justify-content: center;
+  }
+
+  .album-icon {
+    margin-right: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+  }
+
+  .album-cover {
+    width: 200px;
+    height: 200px;
+    border-radius: 16px;
+  }
+
+  .video-description {
+    text-align: left;
+    padding: 15px;
+  }
+
+  .video-title {
+    text-align: left;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .video-info {
+    text-align: left;
+    color: #555;
+  }
+
+  .imgb {
+    width: 100%;
+  }
+
+  x-slide-box {
+    padding: 10px;
+    overflow-x: scroll;
+    flex-shrink: 0;
+    display: flex;
+
+  }
+
+  #linkbox {
+
+    font-size: 14px;
+    color: #909090;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  box {
+    width: 250px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    overflow: hidden;
+    height: auto;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  box img {
+    width: 100%;
+    height: auto;
+  }
+
+  box2 {
+    width: 413px;
+    flex-shrink: 0;
+    display: flex;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    overflow: hidden;
+    height: 100px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
+  }
+
+  box2 img {
+    height: 100%;
+
+  }
+
+  br {
+    clear: both;
+    display: block;
+  }
+
+  h2 {
+    clear: both;
+    background-image: linear-gradient(to right, #548c38, #6cb149);
+    background-repeat: no-repeat;
+    background-size: 100% 10%;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    display: inline-block;
+  }
+
+  * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+
+  /*
+.gallery {
+  background: #EEE;
+}
+.gallery-cell img{
+  height: 100%;
+}
+.gallery-cell {
+  justify-content: center;
+  width: 66%;
+  height: 300px;
+  margin-right: 10px;
+}
+
+.gallery-cell:before {
+  display: block;
+  text-align: center;
+  line-height: 300px;
+}
+*/
+  .iiframe {
+    width: 20%;
+    height: 300px;
+    resize: both;
+  }
+
+  read {
+    background: crimson;
+    padding: 15px;
+    color: #fff;
+    border: solid 3px #fff;
+    user-select: none;
+  }
+
+  maincontents {
+    display: block;
+    width: 100%;
+    z-index: 10;
+    margin-top: 110px;
+  }
+
+  body,
+  html {
+    font-family: Arial, sans-serif;
+    margin: 0px;
+  }
+
+  read {
+    background: crimson;
+    padding: 15px;
+    color: #fff;
+    border: 1px #fff solid
+  }
+
+  topbar {
+    z-index: 88;
+    color: #fff;
+    /*text-align:center;*/
+    width: 100%;
+    padding-top: -1px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background: #fff;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    justify-content: center;
+  }
+
+  .service-logo {
+    height: 75px;
+    margin: 10px;
+  }
+
+  about {
+    display: block;
+    margin: 10px;
+    text-align: center;
+  }
+
+  imbox {
+
+    display: block;
+    background: #000;
+    width: 100%;
+
+    text-align: center;
+  }
+
+  menu1 {
+    cursor: pointer;
+    float: right;
+
+  }
+
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  a:focus {
+    font-weight: bold;
+  }
+
+  box {
+    display: inline-block;
+    margin: 0px 10px 0px 0px;
+  }
+
+  .topimage {
+    text-align: center;
+    width: 50%;
+
+    box-shadow: 10px 0px 320px 10px gray;
+  }
+
+  @media screen and (max-width: 600px) {
+    .topimage {
+      text-align: center;
+      width: 100%;
+      box-shadow: 10px 0px 320px 10px gray;
+    }
+
+    sbmt {
+
+      display: block;
+
+    }
+
+    .iiframe {
+      width: 70%;
+    }
+  }
+</style>
+
 </html>
