--- a/validating_check.html
+++ b/validating_check.html
@@ -20,7 +20,7 @@
   <maincontents>
 
     <about>
-        
+        <div style="text-align:left;">
 <h2>組織番号検証</h2>
 <p>組織番号のチェックディジットを検証できます。<br>基本的には検索画面の「組織番号で探す」からお探しになれますが、<br>データベース掲載の承諾のない場合や、万が一データベースの反映ができていないに簡易的に検証できます。</p>
 <b>※この検証はその番号が存在する証明ではありません。</b>また、
@@ -29,7 +29,7 @@
 <input type="text" id="randomNumberInput"><br>
 <button onclick="validateCheckDigit()">検証する</button>
 <p id="validationResult"></p>
-
+</div>
 <script>
 function _0x1af7(){const _0x511234=['8118iwSdVp','randomNumberInput','98414xboTpm','5958BlefDW','組織番号のチェックディジットは正しいです。<br><a\x20href=\x27history.html?id=','825oVLvDv','112486pcautX','validationResult','substring','チェックディジットが正しくありません。','528oOxjrI','8nzeYXq','4120ysIeFX','13575562cwNkMX','713406LrJEmx','21NcaRib','1813688nexRDo','26IrTmDw','4BhyzzV','getElementById','innerText','value','13桁の番号を入力してください。'];_0x1af7=function(){return _0x511234;};return _0x1af7();}(function(_0x270646,_0x273d26){const _0x5edd9f=_0x6019,_0x1bdc89=_0x270646();while(!![]){try{const _0x260fab=parseInt(_0x5edd9f(0x108))/0x1*(parseInt(_0x5edd9f(0x116))/0x2)+-parseInt(_0x5edd9f(0x10b))/0x3*(parseInt(_0x5edd9f(0x10f))/0x4)+parseInt(_0x5edd9f(0x119))/0x5*(-parseInt(_0x5edd9f(0x114))/0x6)+parseInt(_0x5edd9f(0x10c))/0x7*(-parseInt(_0x5edd9f(0x10d))/0x8)+parseInt(_0x5edd9f(0x117))/0x9*(-parseInt(_0x5edd9f(0x109))/0xa)+parseInt(_0x5edd9f(0x103))/0xb*(-parseInt(_0x5edd9f(0x107))/0xc)+parseInt(_0x5edd9f(0x10e))/0xd*(parseInt(_0x5edd9f(0x10a))/0xe);if(_0x260fab===_0x273d26)break;else _0x1bdc89['push'](_0x1bdc89['shift']());}catch(_0x12dd3e){_0x1bdc89['push'](_0x1bdc89['shift']());}}}(_0x1af7,0x728a2));function _0x6019(_0x59a8ed,_0x432315){const _0x1af7dd=_0x1af7();return _0x6019=function(_0x601915,_0x4a3062){_0x601915=_0x601915-0x103;let _0x4cd131=_0x1af7dd[_0x601915];return _0x4cd131;},_0x6019(_0x59a8ed,_0x432315);}function validateCheckDigit(){const _0x5aed36=_0x6019;let _0x282db4=document[_0x5aed36(0x110)](_0x5aed36(0x115))[_0x5aed36(0x112)];if(_0x282db4['length']!==0xd){document['getElementById'](_0x5aed36(0x104))[_0x5aed36(0x111)]=_0x5aed36(0x113);return;}let _0x56c290=parseInt(_0x282db4['charAt'](0xc)),_0x58296f=_0x282db4[_0x5aed36(0x105)](0x0,0xc),_0x1b27f4=calculateCheckDigit(_0x58296f);_0x56c290===_0x1b27f4?document['getElementById'](_0x5aed36(0x104))['innerHTML']=_0x5aed36(0x118)+document[_0x5aed36(0x110)]('randomNumberInput')[_0x5aed36(0x112)]+'\x27\x20style=\x27color:lightblue;\x27>この組織番号で検索</a>':document[_0x5aed36(0x110)](_0x5aed36(0x104))[_0x5aed36(0x111)]=_0x5aed36(0x106);}function calculateCheckDigit(_0x5518c3){let _0x193f37=0x0,_0xcb3388=0x0;for(let _0x401587=0x0;_0x401587<0xc;_0x401587++){_0x401587%0x2===0x0?_0x193f37+=parseInt(_0x5518c3[_0x401587]):_0xcb3388+=parseInt(_0x5518c3[_0x401587]);}let _0x165776=(_0x193f37+_0xcb3388)%0xa;return _0x165776;}
 </script>
