--- a/validating_check.html
+++ b/validating_check.html
@@ -24,7 +24,7 @@
 <h2>組織番号検証</h2>
 <p>組織番号のチェックディジットを検証できます。<br>基本的には検索画面の「組織番号で探す」からお探しになれますが、<br>データベース掲載の承諾のない場合や、万が一データベースの反映ができていないに簡易的に検証できます。</p>
 <b>※この検証はその番号が存在する証明ではありません。</b>また、
-<a href="nodata.html">データベース掲載の承諾のない企業について</a>はのリンクからご確認いただけます。<br>
+<a href="nodata.html" style="color:#548c38;">データベース掲載の承諾のない企業について</a>はのリンクからご確認いただけます。<br>
 <label for="randomNumberInput">検証したい組織番号を入力してください:</label>
 <input type="text" id="randomNumberInput"><br>
 <button onclick="validateCheckDigit()">検証する</button>
