--- a/kensakumeisho.html
+++ b/kensakumeisho.html
@@ -25,6 +25,7 @@
 
         <about>
             <div style="text-align: left;margin-left:20px;margin-right:20px;">
+                <h1>検索結果一覧</h1>
                 <div id="result"></div>
                 <script>
                     if(decodeURI(location.search.substr(5))==""){
