--- a/validating_check.html
+++ b/validating_check.html
@@ -37,6 +37,8 @@ function _0x1af7(){const _0x511234=['8118iwSdVp','randomNumberInput','98414xboTp
         style="display:block;margin:15px;border-bottom:solid lightblue 5px;border-top:solid lightblue 10px;border-radius:10px 10px 0px 0px;">
         <b style="display:block;margin:15px;border-bottom:solid lightblue 5px;">お知らせ</b>
         <hr>
+        <b>2024/05/18 10:00</b>
+        <p>2024/05/18より実施していたメンテナンスについて、現在完了しました。現在は通常通りご利用いただけます</p>
         <b>2024/05/18 00:00</b>
         <p>2024/05/18より検索システム側のメンテナンスを行います。</p>
         <hr>
