--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
     border-left: solid 5px gray;
     border-right: solid 5px gray;
     border-bottom: none;
+    font-weight: bolder;
+    width: 50%;
   }
 
   .tab-button.active {
@@ -535,6 +537,9 @@
         background-color: #f9f9f9;
         padding: 5px;
     }
+    .tab-button {
+    width: auto;
+  }
 }
 </style>
 
