--- a/index.html
+++ b/index.html
@@ -531,6 +531,15 @@
         margin: 0 auto;
     }
   @media screen and (max-width: 768px) {
+    .service-logo {
+    height: 75px;
+    margin: auto; 
+  }
+
+  topbar{
+    text-align: center;
+  }
+
     .ctner {
         width: 850px;
         margin: 0 auto;
