--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     border-bottom: none;
     font-weight: bolder;
     width: 50%;
-    border-right: solid 5px lightblue;
+    border-bottom: solid 5px lightblue;
   }
 
   .tab-button.active {
