--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="組織番号検索 by Indeeecsa">
   <meta property="og:description"
     content="このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。">
-
+    <meta name="format-detection" content="telephone=no">
   <title>Indeeecsa組織番号検索サイト</title>
 </head>
 
