--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
   .tab-container {
     display: flex;
   }
-
+button,input{
+  color:#000;
+}
   .tab-button {
     border-radius: 8px 8px 0px 0px;
     padding: 10px 20px;
