--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <maincontents>
 
     <about>
-      <h1>組織番号検索</h1>
+      <h1 style="margin-top:10px;">組織番号検索</h1>
       <div style="text-align: left;margin-left:20px;margin-right:20px;">
         このサイトでは、Indeeecsaが組織番号を割り当てた者の<br>1.団体の名称など<br>2.Indeeecsaが割り当てた組織番号<br>を公表しています。<br>また、開発者などに向けたAPIなども試験的に公開しております。
-        <div id="tabArea">
+        <div id="tabArea" style="margin-top:15px;margin-bottom:20px;">
           <div class="tab-container">
             <button class="tab-button active" onclick="openTab(event, 'tab1')">団体の名称などで探す</button>
             <button class="tab-button" onclick="openTab(event, 'tab2')">組織番号で探す</button>
