モバイル対応

--- a/index.html
+++ b/index.html
@@ -540,8 +540,11 @@ button,input{
 
   topbar{
     text-align: center;
+    border-bottom:none;
   }
-
+body{
+  background-color: #f9f9f9;
+}
     .ctner {
         width: 850px;
         margin: 0 auto;
