しゅうせい

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ button,input{
     border-bottom:none;
   }
 body{
-  background-color: #f9f9f9;
+  background-color: #fffff9;
 }
     .ctner {
         width: 850px;
