--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <about>
       <h1 style="margin-top:10px;">組織番号検索</h1>
-      <div style="text-align: left;margin-left:20px;margin-right:20px;">
+      <div style="text-align: left;margin-left:20px;margin-right:20px;background-color: #fff;">
         このサイトでは、Indeeecsaが組織番号を割り当てた者の<br>1.団体の名称など<br>2.Indeeecsaが割り当てた組織番号<br>を公表しています。<br>また、開発者などに向けたAPIなども試験的に公開しております。
         <div id="tabArea" style="margin-top:15px;margin-bottom:20px;">
           <div class="tab-container">
