メール変更

--- a/nodata.html
+++ b/nodata.html
@@ -27,7 +27,7 @@
                 <p>基本的な考え方として、登録組織は必ず組織番号を発行し、その内容のうちの一部である１．組織番号、２．活動地域/所在地、３．名称、名称(フリガナ)をこのデータベースを通して配信します。</p>
                 <h2>組織番号データベース公開の承諾のない企業について</h2>
                 <p>基本的には、すべてのものがデータベースを経由し配信されていますが、データベース掲載を拒否する企業の場合は内容についてお問い合わせを一度Indeeecsaまでお知らせいただき、その内容について検討し個別に開示することになります(会員規約第1条 「開示の条件、保護について」に基づく開示)。</p>
-                <p>お問い合わせの際は、以下の内容をメールcontact+indeeecsa at haruharutv.jpを送信してください。(スパム防止のためatを@に置き換えてください)<br>
+                <p>お問い合わせの際は、以下の内容をメールsoshiki-bangou@indcs.haruharutv.jpに以下の内容を送信してください。(スパム防止のためatを@に置き換えてください)<br>
                 ・お名前<br>
                 ・返信用メールアドレス<br>
                 ・お問い合わせの内容<br>
