<meta name="format-detection" content="telephone=no">に対応

--- a/validating_check.html
+++ b/validating_check.html
@@ -4,7 +4,7 @@
 <head>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <meta name="google-site-verification" content="NGOM7ONHZi7WONhwlckYve1dBRqZKmK5GKSz0QLJXjY" />
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"><meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。">
