--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 
 <head>
+  <meta name="format-detection" content="telephone=no">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <meta name="google-site-verification" content="NGOM7ONHZi7WONhwlckYve1dBRqZKmK5GKSz0QLJXjY" />
   <meta charset="UTF-8">
