--- a/nodata.html
+++ b/nodata.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head><meta name="format-detection" content="telephone=no">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <meta name="google-site-verification" content="NGOM7ONHZi7WONhwlckYve1dBRqZKmK5GKSz0QLJXjY" />
     <meta charset="UTF-8">
