検索時の修正

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </center>
             <script>
               function sbmt1() {
-                location.href = "kensakumeisho.html?key=" + document.getElementById("meisho").value + document.getElementById("regsel").value;
+                location.href = "kensakumeisho.html?key=" + document.getElementById("meisho").value + " " + document.getElementById("regsel").value;
               }
               function sbmt2() {
                 location.href = "history.html?id=" + document.getElementById("orgid").value;
